--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=7.3",
-        "illuminate/support": "^8|^9|^10.0",
+        "illuminate/support": "^8|^9|^10.0|^11.0",
         "fabpot/goutte": "^4.0"
     },
     "require-dev": {
