--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,12 @@
             "homepage": "https://danielweidner.de"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/syntaxevolution/Goutte.git"
+        },
+    ],
     "require": {
         "php": ">=7.3",
         "illuminate/support": "^8|^9|^10.0|^11.0",
