--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": ">=7.3",
         "illuminate/support": "^8|^9|^10.0|^11.0",
-        "fabpot/goutte": "dev-master"
+        "syntaxevolution/goutte": "dev-master"
     },
     "require-dev": {
         "orchestra/testbench": "^6|^8.0"
