--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,9 @@
             "homepage": "https://danielweidner.de"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/syntaxevolution/Goutte.git"
-        }
-    ],
     "require": {
         "php": ">=7.3",
-        "illuminate/support": "^8|^9|^10.0|^11.0",
-        "syntaxevolution/Goutte": "^0.0.1"
+        "illuminate/support": "^8|^9|^10.0|^11.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6|^8.0"
